fixed buttons and alignment on bottom

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ body, .page-footer {
 }
 
 #previouslySearched {
-     
+
 }
 .page-footer {
 background-color: linear-gradient(#26a69a);
@@ -90,7 +90,7 @@ span {
 float: left;
 -webkit-box-sizing: border-box;
 box-sizing: border-box;
-padding: 0 .75rem;
+padding: 0px;
 min-height: 1px;
 margin-bottom: 0px;
 
